Fix table on mobile, remove ETA

--- a/static/main.css
+++ b/static/main.css
@@ -38,3 +38,36 @@ th,
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.table {
+    table-layout:fixed; 
+    word-break:break-all;
+}
+
+@media screen and (max-width: 900px) {
+
+    table { border: 0; }
+
+    table thead { display: none; }
+
+    table tr {
+      margin-bottom: 30px;
+      display: block;
+      border-bottom: 2px solid #ddd;
+    }
+
+    table td {
+      display: block;
+      text-align: right !important;
+      font-size: 13px;
+    }
+
+    table tr:last-child { border-bottom: 0; }
+
+    table td:before {
+      content: attr(data-label);
+      float: left;
+      font-weight: bold;
+    }
+
+}
